# rules_oapi_codegen

./: .gitignore  BUILD.bazel  README.md  WORKSPACE
example/: BUILD.bazel
oapi_codegen/: def.bzl  repositories.bzl
oapi_codegen/repositories/: v1_8_2.bzl
